--- a/css/main.css
+++ b/css/main.css
@@ -496,7 +496,7 @@ table thead input[type="text"] {
 
 #yw0 {position: relative;}
 #top-menu #yw0 {top:0px;}
-.search-word {color:#00F;font-weight: bold;background-color: yellow;}
+.search-word {color:#00F;font-weight: bold;background-color: orange;}
 
 #db-list { padding: 0 0 0 25px; list-style-type: none;}
 
